# ptask

./: AUTHORS  Makefile.am  Makefile.in  NEWS  NEWS.html  README  README.html  aclocal.m4  config.h.in  configure  configure.ac  ptask.desktop  style.css
icons/hicolor/scalable/: Makefile.am  Makefile.in
po/: LINGUAS  POTFILES.in  fr.gmo  fr.po  ptask.pot
src/: Makefile.am  Makefile.in  log.c  log.h  main.c  note.c  note.h  pio.c  pio.h  pstr.c  pstr.h  ptask.1  ptask.gschema.xml  ptime.c  ptime.h  settings.c  settings.h  tw.c  tw.h  ui.c  ui.h  ui_newtask_diag.c  ui_newtask_diag.h  ui_projecttree.c  ui_projecttree.h  ui_taskpanel.c  ui_taskpanel.h  ui_tasktree.c  ui_tasktree.h
src/glade/: Makefile.am  Makefile.in  ptask.glade
tests/: Makefile.am  Makefile.in  test-cppcheck.sh
